# app-connectivity

./: .gitignore  README.md  cmets.xlsx  config.py  data_extraction.py  downloader_main.py  effectiveness.py  excel_export.py  extraction_main.py  extractor.py  inspect_bay.py  llm_client.py  main.py  output.json  output.xlsx  pipeline_tracker.db  pipeline_tracker.db-shm  pipeline_tracker.db-wal  prompts.py  requirements.txt
ctuil-pdf-scraper-main/: .gitignore  README.md  main.py  pyproject.toml  system_architecture.md
ctuil-pdf-scraper-main/app/: catalog.py  helpers.py  schemas.py
ctuil-pdf-scraper-main/app/modules/cea/: routes.py  services.py
ctuil-pdf-scraper-main/app/modules/ctuil/: routes.py  services.py
ctuil-pdf-scraper-main/app/modules/pfcclindia/: routes.py  services.py
ctuil-pdf-scraper-main/app/scrapers/: source_01_ctuil_ists_consultation_meeting_scraper.py  source_03_ctuil_regenerators_scraper.py  source_05_ctuil_bidding_calender_scraper.py  source_09_ctuil_renewable_energy_scraper.py  source_10a_cea_potential_rezones_scraper.py  source_10b_cea_nct_meetings_scraper.py  source_10c_pfcclindia_tender_scraper.py  source_11_ctuil_substation_bulk_consumers_scraper.py  source_12_ctuil_gna_connectivity_fresh_scraper.py
page_chunks/: test_page_1.json  test_page_10.json  test_page_2.json  test_page_3.json  test_page_4.json  test_page_5.json  test_page_6.json  test_page_7.json  test_page_8.json  test_page_9.json
pipeline/: __init__.py  excel_utils.py  extraction_orchestrator.py  shared_utils.py  tracker.py
pipeline/bay_mapping_handler/: __init__.py  (+3 more)
(+64 files in other folders)
