[project]
name = "web-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "requests>=2.33.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.14.3",
    "aiohttp>=3.13.5",
    "python-dateutil>=2.9.0.post0",
    "lxml>=6.1.0",
    "python-multipart>=0.0.26",
]
